--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <section class="resume-section" id="datos">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Faustino
+                        <span class="text-primary">Andrea</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        406 Trujillo-La Libertad · Florenicia de Mora, CO 13001 · 953191195 ·
+                        <a href="mailto:faustinomudarra2@gmail.com">faustinoandrea2@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> Soy estudiante de la Universidad Nacional de Trujillo, me encuentro den el octavo ciclo de la carrrea de Docencia en la especialidad de Filosofía, Psicología y Ciencias Sociales.</p>
                     <div class="social-icons">
@@ -60,7 +60,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experiencia">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Experiencia</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
@@ -99,7 +99,7 @@
             <!-- Education-->
             <section class="resume-section" id="educación">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Educación</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Colorado Boulder</h3>
@@ -123,7 +123,7 @@
             <!-- Skills-->
             <section class="resume-section" id="habilidades">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Habilidades</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -164,16 +164,16 @@
             <!-- Interests-->
             <section class="resume-section" id="intereses">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Intereses</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="premios">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Premios y conmemoraciones</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
