--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         406 Trujillo-La Libertad · Florenicia de Mora, CO 13001 · 953191195 ·
                         <a href="mailto:faustinomudarra2@gmail.com">faustinoandrea2@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> Soy estudiante de la Universidad Nacional de Trujillo, me encuentro den el octavo ciclo de la carrrea de Docencia en la especialidad de Filosofía, Psicología y Ciencias Sociales.</p>
+                    <p class="lead mb-5"> Soy estudiante de la Universidad Nacional de Trujillo, me encuentro en el octavo ciclo de la carrrea de Docencia en la especialidad de Filosofía, Psicología y Ciencias Sociales.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
