--- a/index.html
+++ b/index.html
@@ -177,41 +177,41 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Certificado de Invertigación en concurso de "Pequeños genios" -2009
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Certificado de Pintura a Nivel Nacional - 2011
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Place - concurso de Fotografía "Amantes de la Luna" - 2012
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
+                            <sup>st</sup>
+                            Place - concurso de Poesía "San marcerlo" -2015
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            3
                             <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Place - Informe al almirante Miguel Grau- 2015
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            Place - concurso de poesía a nivel regional -2017
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
+                            1
                             <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Place - concurso de poesía en honar a Cesar vallejo
                         </li>
                     </ul>
                 </div>
