--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
                     <h2 class="mb-5">Educación</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Colegío Municipal</h3>
+                            <div class="subheading mb-3">Primaria</div>
+                            <div>Maestra Juana Arteaga - Director José Perez</div>
+                            <p>Excelencia en alistantes y sin cursos repetidos</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2007 - Diciembre 2012</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Colegio San Marcelo</h3>
+                            <div class="subheading mb-3">Nivel Secundario</div>
+                            <p>Segundo puesto por 3 años consecutivos</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2013 - Diciembre 2017</span></div>
                     </div>
                 </div>
             </section>
