--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <section class="resume-section" id="intereses">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p> Me gusta mucho viajar y conocer lugares nuevos, escuchar música y bailar según mis emociones, es liberadro despues de un largo día de estudio buscar una forma de relajarse, salir con mis amigos también me ayuda mucho y por lo general soy muy feliz haciendo lo que me gusta pues todo ello surge de la pasíon que tengo.</p>
+                    <p class="mb-0">Entre otras cosas que disfruto estaán las manualidades, ir a centros de arte o museos, la danza compemporaéa o resitales siempre son buenos lugares para sentirme comoda, no suelo disfrutar de las fiestas pero si es familiar no me molesta asistir con tal de pasar un rato en familia.</p>
                 </div>
             </section>
             <hr class="m-0" />
