--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <section class="resume-section" id="intereses">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p> Me gusta mucho viajar y conocer lugares nuevos, escuchar música y bailar según mis emociones, es liberadro despues de un largo día de estudio buscar una forma de relajarse, salir con mis amigos también me ayuda mucho y por lo general soy muy feliz haciendo lo que me gusta pues todo ello surge de la pasíon que tengo.</p>
-                    <p class="mb-0">Entre otras cosas que disfruto estaán las manualidades, ir a centros de arte o museos, la danza compemporaéa o resitales siempre son buenos lugares para sentirme comoda, no suelo disfrutar de las fiestas pero si es familiar no me molesta asistir con tal de pasar un rato en familia.</p>
+                    <p> Me gusta mucho viajar y conocer lugares nuevos, escuchar música y bailar según mis emociones es liberadro despues de un largo día de estudio. buscar una forma de relajarse como salir con mis amigos también me ayuda mucho y por lo general soy muy feliz haciendo lo que me gusta pues todo ello surge de la pasíon que tengo.</p>
+                    <p class="mb-0">Entre otras cosas que disfruto están las manualidades, ir a centros de arte o museos, la danza compemporaéa o resitales siempre son buenos lugares para sentirme comoda; no suelo disfrutar de las fiestas pero si es familiar no me molesta asistir con tal de pasar un buen momento con ellos.</p>
                 </div>
             </section>
             <hr class="m-0" />
