--- a/index.html
+++ b/index.html
@@ -129,20 +129,16 @@
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>
                             Mobile-First, Responsive Design
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>
                             Cross Browser Testing & Debugging
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>
                             Cross Functional Teams
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum
                         </li>
                     </ul>
