--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@
             <section class="resume-section" id="habilidades">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Desarrollo Tecnologíco y Manejo de Idiomas</div>
                     <ul class="list-inline dev-icon
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Perseverancia al Máximo</div>
                     <ul class="fa-ul mb-0">
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Manejo de Tics 
                         </li>
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Ingles básico
                         </li>
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Francés Intermedio
                         </li>
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Diseño de Paginas Web
                         </li>
                     </ul>
                 </div>
