--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <h2 class="mb-5">Experiencia</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Institución EEducativa Francisco Lizarsuburo</h3>
+                            <h3 class="mb-0">Institución Educativa Francisco Lizarsuburo</h3>
                             <div class="subheading mb-3">Segundo Año de Secundaria</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>"Autoestima y Condusctas Alimentarias" se brindo un taller en el segundo año de secundaria debido a la transcisión que se tendrá al pasar a tercer año en donde los cambios físicos como emocionales no solo evolucionan sino que se ven alteradas e influenciadas algunas veces por la sociedad, criticas y comentarios que dañan lo más valioso en los jovenes "la autoestima" esa base que necesitan para un buen desarrollo emocional..</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Julio 2022 - Trabajo de Investigación</span></div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Institución Educativa Liceo Trujillo</h3>
                             <div class="subheading mb-3">Tercer Año de Secundaria</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>Brindar por dos meses clases fortaleció no solo mi método de enseñanza como futura docente, sino que me hizo reflexionar sobre las distintas facetas de los estudiantes, como una nueva redacción de cada sesión de clase que llegue a elaborar en donde el contexto y motivación son pilares importante a la hora de ejecutar una clase.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Septiembre 2022 - Practicas pre-profecionales</span></div>
                     </div>
@@ -81,7 +81,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Institución Educativa Rafael Narvaez</h3>
                             <div class="subheading mb-3">Primer Año de Secundaria</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>tuve a cargo como tutora la ejecución de toda una unidad dentro de la institución como el manejo de la actividad navideña, todo una administración que también forma parte de nuestra profesión.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Noviembre 2022 - Practicas</span></div>
                     </div>
