--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5"> Soy estudiante de la Universidad Nacional de Trujillo, me encuentro en el octavo ciclo de la carrrea de Docencia en la especialidad de Filosofía, Psicología y Ciencias Sociales.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/AndreaFaustino2022"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
