--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     </div>
                     <p class="lead mb-5"> Soy estudiante de la Universidad Nacional de Trujillo, me encuentro en el octavo ciclo de la carrrea de Docencia en la especialidad de Filosofía, Psicología y Ciencias Sociales.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-join"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AndreaFaustino2022"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://twitter.com/githubstatus"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/andreaenlinea"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
