--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <section class="resume-section" id="habilidades">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades</h2>
-                    <div class="subheading mb-3">Desarrollo Tecnologíco y Manejo de Idiomas</div>
+                    <div class="subheading mb-3">Desarrollo Tecnológico y Manejo de Idiomas</div>
                     <ul class="list-inline dev-icon
                     </ul>
                     <div class="subheading mb-3">Perseverancia al Máximo</div>
